# opsiclientd

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  build_binary.sh  cache_service.conf  create_archive.sh  create_svn_commit.sh  opsi-dev-tool.yml  opsiclientd-windows.manifest  opsiclientd.py  opsiclientd_rpc  pyinstaller-build.py  pyproject.toml  python-opsi  pywinpty-1.1.2-cp37-none-win32.whl  run-opsiclientd  run_qa.sh  service_setup.sh  setup.opsiscript  setup.py  windows-manifest.xml
.devcontainer/: devcontainer.json  opsiclientd-dev-compose.yml  post_start.sh
.devcontainer/opsiclientd-dev-docker/: Dockerfile
.devcontainer/opsiclientd-dev-docker/files/root/: .bash_history
data/linux/: notifier.py
data/windows/helpers/notifier/: action.ini
debian/: changelog  control  copyright  dirs  opsiclientd.dirs  opsiclientd.initv  opsiclientd.lintian-overrides  opsiclientd.service  opsiclientd.upstart  rules
extend.d/: 10_opsi.conf  20_legacy.conf
gettext/: opsiclientd.pot  opsiclientd_da.mo  opsiclientd_da.po  opsiclientd_de.mo  opsiclientd_de.po  opsiclientd_es.mo  opsiclientd_es.po  opsiclientd_fr.mo  opsiclientd_fr.po  opsiclientd_it.mo  opsiclientd_it.po  update_po.sh
ocdlib/: ControlServer.py
ocdlib/Events/Windows/: __init__.py
opsiclientd/: Config.py  ControlPipe.py  ControlServer.py  EventConfiguration.py  EventProcessing.py  Exceptions.py  Localization.py  OpsiService.py  Opsiclientd.py  Posix.py  SoftwareOnDemand.py  State.py  SystemCheck.py  Timeline.py  Windows.py  __init__.py  __main__.py  actionprocessorstarter.py  installationhelper.py  notification_server.py  opsiclientdmain.py  opsiclientdrpc.py  setup.py  terminal.py  utils.py
opsiclientd/Events/: Basic.py  Custom.py  DaemonShutdown.py  DaemonStartup.py  GUIStartup.py  Panic.py  ProcessActionRequests.py  SwOnDemand.py  SyncCompleted.py  Timer.py  __init__.py
opsiclientd/Events/Posix/: Custom.py  GUIStartup.py  __init__.py
opsiclientd/Events/Utilities/: Configs.py  Factories.py  Generators.py  __init__.py
opsiclientd/Events/Windows/: Custom.py  GUIStartup.py  SensLogon.py  SystemShutdown.py  UserLogin.py  WMI.py  __init__.py
opsiclientd/darwin/: main.py
opsiclientd/linux/: main.py
opsiclientd/messagebus/: __init__.py  filetransfer.py  process.py  terminal.py
opsiclientd/nonfree/: CacheBackend.py  CacheService.py  Posix.py  RPCProductDependencyMixin.py  __init__.py
opsiclientd/nonfree/Events/: Config.py  Generator.py  __init__.py
opsiclientd/posix/: __init__.py  main.py
opsiclientd/webserver/: __init__.py
opsiclientd/webserver/application/: __init__.py  cache_service.py  control.py  download.py  index.py  info.py  kiosk.py  log_viewer.py  main.py  middleware.py  terminal.py  upload.py
opsiclientd/webserver/rpc/: __init__.py  control.py  interface.py  jsonrpc.py
opsiclientd/windows/: __init__.py  main.py  opsiclientd.py  service.py
opsiclientd_data/common/static_html/: index.html  log_viewer.html  opsiclientd.css
opsiclientd_data/common/static_html/javascript/: log_viewer.js  msgpack.js
opsiclientd_data/darwin/: opsiclientd.conf
opsiclientd_data/linux/: notifier.py  opsiclientd.conf
opsiclientd_data/windows/: opsiclientd.conf
opsiclientd_data/windows/helpers/action_processor_starter/: action_processor_starter.py
opsiclientd_data/windows/helpers/notifier/: block_login.ini  userlogin.ini
opsiclientd_data/windows/helpers/opsiclientd_rpc/: opsiclientd_rpc.py
opsiclientd_data/windows/helpers/opsiclientd_shutdown_starter/: opsiclientd_shutdown_starter.py
src/: json.py  opsiclientd.py  requirements-cx_freeze.txt  requirements-qa.txt  requirements-tests.txt  requirements.txt  run_qa.sh  setup-cx-freeze.py  setup.py  setuplib.py
src/Microsoft.VC90.CRT/: Microsoft.VC90.CRT.manifest
src/Microsoft.VC90.MFC/: Microsoft.VC90.MFC.manifest
src/gettext/: opsiclientd_de.mo  opsiclientd_de.po  opsiclientd_fr.mo  update_po.sh
src/linux/: notifier.py  opsiclientd.conf
src/ocdlib/: CacheService.py  Config.py  ControlPipe.py  ControlServer.py  EventConfiguration.py  EventProcessing.py  Events.py  Exceptions.py  JsonRpc.py  Localization.py  OpsiService.py  Opsiclientd.py  Posix.py  SoftwareOnDemand.py  State.py  Timeline.py  Windows.py  WindowsService.py  __init__.py
src/ocdlib/Events/: Basic.py  Configs.py  Custom.py  DaemonShutdown.py  DaemonStartup.py  Factories.py  Generators.py  Panic.py  ProcessActionRequests.py  SwOnDemand.py  SyncCompleted.py  Timer.py  __init__.py
src/ocdlib/Events/Posix/: Custom.py  __init__.py
src/ocdlib/Events/Utilities/: Factories.py  Generators.py  __init__.py
src/ocdlib/Events/Windows/: Custom.py  GUIStartup.py  SensLogon.py  (+3 more)
src/ocdlibnonfree/: CacheBackend.py  CacheService.py  EventProcessing.py  Events.py  Posix.py  SoftwareOnDemand.py  __init__.py
src/ocdlibnonfree/Events/: Config.py  Generator.py
src/ocdlibnonfree/tests/: test_opsiclientd.py
src/opsiclientd/: CacheService.py  ControlPipe.py  ControlServer.py  Events.py  Exceptions.py  Opsiclientd.py  Posix.py  Windows.py  __init__.py
src/scripts/: opsiclientd  opsiclientd_rpc
src/static_html/: index.html  opsiclientd.css
src/tests/: conftest.py  context.py  helper.py  network_performance.py  run_controlserver.py  test_cache_backend.py  test_config.py  test_control_server.py  test_event_config.py  test_events.py  test_exceptions.py  test_opsiclientd.py  test_opsiclientd_on_posix.py  test_opsiclientdinit_posix.py  test_system_check.py
src/windows/: opsiclientd.conf
src/windows/librsync/: _librsync.pyd  librsync.py
static_html/: index.html  opsiclientd.css  timeline-api.js
tests/: __init__.py  conftest.py  helper.py  network_performance.py  run_controlserver.py  test_cache_backend.py  test_config.py  test_control_pipe.py  test_control_server.py  test_event_config.py  test_events.py  test_exceptions.py  test_logging.py  test_message_of_the_day.py  test_notification_server.py  test_opsiclientd_on_posix.py  test_opsiclientdinit_posix.py  test_system_check.py  test_webserver.py  utils.py
tests/data/: opsiclientd.conf
tests/data/event_config/: 1.conf
(+15 files in other folders)
