[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "opsiclientd"
version = "4.3.0.8"
description = "opsi client daemon. The service running on opsi clients."
maintainers = [ "uib GmbH <info@uib.de>",]
authors = [ "uib GmbH <info@uib.de>",]
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
include = [ "run-opsiclientd", "opsiclientd_data/**/*",]
[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 140
target-version = [ "py311",]
use-tabs = true

[tool.isort]
profile = "black"
indent = "\t"

[tool.ruff]
line-length = 140
ignore = [ "F401", "E402", "F811",]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
autobahn = "^22.4"
cryptography = "38.0.4"
macholib = "^1.14"
msgpack = "^1.0"
netifaces = "^0.11"
pyelftools = "^0.29"
python-opsi = "^4.3.0.13"
python-opsi-common = "^4.3.0"
zeroconf = "^0.129"

[tool.poetry.dev-dependencies]
mock = "^5.0"
mypy = "^1.4"
pylint = "^2.5"
pytest = "^7.1"
pytest-cov = "^4.0"
requests = "^2.25"
ruff = "^0.1"
pyinstaller = "5.13.0"

[tool.poetry.scripts]
opsiclientd = "opsiclientd.__main__:opsiclientd"
opsiclientd_rpc = "opsiclientd.__main__:opsiclientd_rpc"
action_processor_starter = "opsiclientd.__main__:action_processor_starter"

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.dependencies.distro]
platform = "linux"
version = "^1.5"

[tool.poetry.dependencies.websocket-client]
git = "https://github.com/j-a-n/websocket-client.git"
branch = "fix-get_proxy_info-for-https"

[tool.poetry.dependencies.pywin32]
platform = "win32"
version = ">=303,<304"

[tool.poetry.dependencies.pywinpty]
platform = "win32"
version = "^2.0"

[tool.poetry.dependencies.wmi]
platform = "win32"
version = "^1.5"

[tool.poetry.dev-dependencies.macholib]
version = "^1.14"
platform = "darwin"

[tool.poetry.dev-dependencies.pefile]
version = "^2023.2"
platform = "win32"

[tool.poetry.dev-dependencies.pywin32-ctypes]
version = "^0.2"
platform = "win32"
